config/objects/Account.object
<CustomObject>
    <fields>
        <fullName>A_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>A List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Number_del__c</fullName>
        <label>Account Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounts_Payable_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accounts Payable Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Appointment_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Appointment Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Send_Rate_Quotes_When_Matched__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Send Rate Quotes When Matched?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Broker_Carrier_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Broker Carrier Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CC_Security_Code__c</fullName>
        <label>CC Security Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Outcome__c</fullName>
        <label>Call Outcome</label>
        <picklist>
            <picklistValues>
                <fullName>No Answer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voicemail - Message</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voicemail - No message</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Live - No Conversation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Live - Conversation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Census_Beverages__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Census Beverages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Census_Building_Material__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Census Building Material</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Census_Chemicals__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Census Chemicals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Census_Class_Def__c</fullName>
        <description>When the CENSUSCLASS alpha string contains L this value represents an Operation Classification designated by the carrier.</description>
        <label>Census Class Def</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Census_Class__c</fullName>
        <label>Census Class</label>
        <picklist>
            <picklistValues>
                <fullName>A = Authorized-for-Hire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B = Exempt-for-Hire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C = Private (Property)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D = Private/Passenger Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E = Private/Passenger Non-Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F = Migrant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G = U.S. Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H = Federal Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I = State Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J = Local Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K = Indian Tribe</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Census_Coal_Coke__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Census Coal/Coke</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Census_Cold_Food__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Census Cold Food</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Census_Construction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Census Construction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Census_DBNumber__c</fullName>
        <description>This is the carrier&apos;s Dun &amp; Bradstreet number.</description>
        <inlineHelpText>Dun &amp; Bradstreet number.</inlineHelpText>
        <label>Census DBNumber</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Census_Drive_Tow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Census Drive/Tow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Census_Drivers__c</fullName>
        <label>Census Drivers</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Census_Dry_Bulk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Census Dry/Bulk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Census_Email_Address__c</fullName>
        <description>CENSUSEMAILADDRESS</description>
        <label>Census Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Census_Farm_Supplies__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Census Farm Supplies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Census_Fresh_Produce__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Census Fresh Produce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Census_Garbage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Census Garbage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Census_Gen_Freight__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Census Gen Freight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Census_Grain_Feed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Census Grain Feed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Census_House_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Census House Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Census_Intermodal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Census Intermodal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Census_Leased_Tractors__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Census Leased Tractors</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Census_Leased_Trailers__c</fullName>
        <label>Census Leased Trailers</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Census_Liquid_Gas__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Census Liquid Gas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Census_Livestock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Census Livestock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Census_Log_Pole__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether carrier designated this as a type of cargo carried. When value is X then indicate &quot;Logs, Poles, Beams, Lumber&quot;.</description>
        <label>Census Log Pole</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Census_MCS_150_Mileage_Year__c</fullName>
        <label>Census MCS 150 Mileage Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Census_MCS_150__c</fullName>
        <label>Census MCS-150</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Census_MCS_Mileage_150__c</fullName>
        <description>Census_MCS_Mileage_150__c</description>
        <label>Census MCS Mileage 150</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Census_Machinery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Census Machinery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Census_Meat__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Census Meat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Census_Metals__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Census Metals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Census_Mobile_Homes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Census Mobile Homes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Census_Motor_Vehicles__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Census Motor Vehicles</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Census_Oilfield_Equipment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Census Oilfield Equipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Census_Owned_Tractors__c</fullName>
        <label>Census Owned Tractors</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Census_Owned_Trailers__c</fullName>
        <label>Census Owned Trailers</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Census_Paper_Products__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Census Paper Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Census_Passengers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Census Passengers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Census_Power_Units__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Census Power Units</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Census_US_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Census US Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Census_Utilities__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Census Utilities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Census_Water_Well__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Census Water Well</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consignee_Regions__c</fullName>
        <label>Consignee Regions</label>
        <picklist>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midatlantic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mountain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Texas</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Credit_App_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit App Submitted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Limit__c</fullName>
        <description>What is our credit limit with this carrier?</description>
        <inlineHelpText>What is our credit limit with this carrier?</inlineHelpText>
        <label>Credit Limit</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Terms__c</fullName>
        <description>How long do we have to pay invoices?</description>
        <inlineHelpText>How long do we have to pay invoices?</inlineHelpText>
        <label>Credit Terms</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DBA_Name__c</fullName>
        <label>DBA Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Appointment_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delivery Appointment Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Destination_Notes__c</fullName>
        <label>Destination Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Destinations__c</fullName>
        <label>Destinations</label>
        <picklist>
            <picklistValues>
                <fullName>REGION: WEST COAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Washington</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oregon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REGION: MOUNTAIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wyoming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REGION: SOUTHWEST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Mexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REGION: PLAINS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Dakota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Dakota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebraska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REGION: TEXAS+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oklahoma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Texas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REGION: MIDWEST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wisconsin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ohio</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Docket__c</fullName>
        <externalId>true</externalId>
        <label>Docket</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Spot Quote Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <label>Equipment</label>
        <picklist>
            <picklistValues>
                <fullName>Van</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liftgate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refrigerated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flatbed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armored</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bread</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Garbage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forklift</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Extension__c</fullName>
        <label>Extension</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FMCSA_Application_ID__c</fullName>
        <label>FMCSA Application ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FMCSA_BIPD_Filed__c</fullName>
        <description>This value indicates the dollar amount of liability insurance on file for the company, as reported to the FMCSA by insurance underwriters. Even though BIPD insurance may not be required, some companies will maintain a BIPD insurance policy.</description>
        <label>FMCSA BIPD Filed</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FMCSA_BIPD_Required__c</fullName>
        <description>BIPD is bodily injury property damage, more commonly known as liability insurance. If BIPD is required by the FMCSA, the minimum dollar amount of required coverage will be specified. If required, the minimum amount is usually 750000 ($750,000.00), but it could be higher. It could also be 0 (zero), if BIPD is not required. FMCSA requires companies with contract authority to have BIPD insurance.</description>
        <label>FMCSA BIPD Required</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FMCSA_Bond_Filed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Possible Values: Y or N. This value indicates whether a broker bond is on file for the company, as reported to the FMCSA by insurance underwriters. There are two possible values: &quot;Y&quot; for yes or &quot;N&quot; for no.</description>
        <label>FMCSA Bond Filed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FMCSA_Bond_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Possible Values: Y or N. This value indicates whether the FMCSA requires the company to have a bond. There are two possible values: &quot;Y&quot; for yes or &quot;N&quot; for no. FMCSA requires companies with broker authority to maintain a bond.</description>
        <label>FMCSA Bond Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FMCSA_Broker__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This value describes the company&apos;s broker authority status. There are three possible values: &quot;A&quot; for active broker authority, &quot;I&quot; for inactive broker authority or &quot;N&quot; for no broker authority.</description>
        <label>FMCSA Broker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FMCSA_Business_Address__c</fullName>
        <description>This is the business address for the company.</description>
        <label>FMCSA Business Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FMCSA_Business_City__c</fullName>
        <label>FMCSA Business City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FMCSA_Business_Country__c</fullName>
        <label>FMCSA Business Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FMCSA_Business_Fax__c</fullName>
        <label>FMCSA Business Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FMCSA_Business_Phone__c</fullName>
        <label>FMCSA Business Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FMCSA_Business_State__c</fullName>
        <label>FMCSA Business State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FMCSA_Business_Zip__c</fullName>
        <label>FMCSA Business Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FMCSA_Cargo_Filed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This value indicates whether cargo insurance is on file for the company, as reported to the FMCSA by insurance underwriters</description>
        <inlineHelpText>Whether cargo insurance is on file for the company, as reported to the FMCSA by insurance underwriters</inlineHelpText>
        <label>FMCSA Cargo Filed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FMCSA_Cargo_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FMCSA Cargo Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FMCSA_Common_Authority__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This value describes the company&apos;s common carrier authority status. There are three possible values: &quot;A&quot; for active common authority, &quot;I&quot; for inactive common authority or &quot;N&quot; for no common authority.</description>
        <inlineHelpText>Company&apos;s common carrier authority status.</inlineHelpText>
        <label>FMCSA Common Authority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FMCSA_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FMCSA Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FMCSA_DBA_Name__c</fullName>
        <label>FMCSA DBA Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FMCSA_Date_Last_Updated__c</fullName>
        <label>FMCSA Date Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FMCSA_Docket_Number__c</fullName>
        <label>FMCSA Docket Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FMCSA_Freight__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Possible Values: Y or N. This is the &quot;Cargo Authorization&quot; for &quot;Property&quot; Y for Yes and N for No.</description>
        <inlineHelpText>Cargo Authorization for Property</inlineHelpText>
        <label>FMCSA Freight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FMCSA_House_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is the &quot;Cargo Authorization&quot; for &quot;Household Goods&quot; Y for Yes and N for No.</description>
        <label>FMCSA House Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FMCSA_Legal_Name__c</fullName>
        <label>FMCSA Legal Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FMCSA_Mail_Address__c</fullName>
        <label>FMCSA Mail Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FMCSA_Mail_City__c</fullName>
        <label>FMCSA Mail City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FMCSA_Mail_Country__c</fullName>
        <label>FMCSA Mail Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FMCSA_Mail_Fax__c</fullName>
        <label>FMCSA Mail Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FMCSA_Mail_Phone__c</fullName>
        <label>FMCSA Mail Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FMCSA_Mail_State__c</fullName>
        <label>FMCSA Mail State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FMCSA_Mail_Zip__c</fullName>
        <label>FMCSA Mail Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FMCSA_Passenger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FMCSA Passenger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FMCSA_Pending_Broker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FMCSA Pending Broker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FMCSA_Pending_Common_Authority__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Possible Values: Y or N. This value describes whether the company has applied for common carrier authority and is in the process of receiving it. There are two possible values: &quot;Y&quot; for yes or &quot;N&quot; for no.</description>
        <label>FMCSA Pending Common Authority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FMCSA_Pending_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FMCSA Pending Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FMCSA_Revoking_Broker__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Possible Values: Y or N. This value describes whether the company is pending revocation of its broker authority. It may soon lose authority. There are two possible values: &quot;Y&quot; for yes or &quot;N&quot; for no. Yes usually indicates the company is within 30 days of the premium being due for its broker bond, and it remains unpaid. However, there are other reasons this warning flag may get raised.</description>
        <label>FMCSA Revoking Broker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FMCSA_Revoking_Common__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Possible Values: Y or N. This value describes whether the company is pending revocation of its common carrier authority. It may soon lose authority. There are two possible values: &quot;Y&quot; for yes or &quot;N&quot; for no. Yes does not mean they have lost their common carrier authority. Yes usually indicates the company is within 30 days of its insurance premium being due, and it remains unpaid. However, there are other reasons this warning flag may get raised.</description>
        <label>FMCSA Revoking Common</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FMCSA_Revoking_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FMCSA Revoking Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FMCSA_USDOT_Number__c</fullName>
        <label>FMCSA USDOT Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Freight_Notes2__c</fullName>
        <label>Freight Notes</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Freight_Notes__c</fullName>
        <label>Freight Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hazmat_Capable__c</fullName>
        <label>Hazmat Capable?</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inbound_Notes__c</fullName>
        <label>Inbound Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Inbound_States__c</fullName>
        <label>Inbound States</label>
        <picklist>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebraska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Hampshire</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
</CustomObject>